perfsonar-toolkit (5.1.0-1) perfsonar-5.1; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Mon, 10 Jun 2024 12:44:51 +0200

perfsonar-toolkit (5.0.8-2) perfsonar-5.0; urgency=low

  * Loading Apache Rewrite config for the SSL VHost too.
  * Adding link to pscheduler.log in /var/log/perfsonar

 -- Lætitia Delvaux <adelvaux@man.poznan.pl>  Fri, 10 May 2024 00:28:53 +0200 

perfsonar-toolkit (5.0.8-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Mon, 05 Feb 2024 12:54:25 -0500

perfsonar-toolkit (5.0.7-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Fri, 08 Dec 2023 15:42:53 -0500

perfsonar-toolkit (5.0.6-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Fri, 10 Nov 2023 15:31:25 -0500

perfsonar-toolkit (5.0.5-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Wed, 27 Sep 2023 10:28:40 -0400

perfsonar-toolkit (5.0.4-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Mon, 24 Jul 2023 10:39:38 -0400

perfsonar-toolkit (5.0.3-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Fri, 16 Jun 2023 12:43:56 -0400

perfsonar-toolkit (5.0.2-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Fri, 02 Jun 2023 09:01:10 -0700

perfsonar-toolkit (5.0.1-1) perfsonar-5.0; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Wed, 19 Apr 2023 15:50:40 -0400

perfsonar-toolkit (5.0.0-2) perfsonar-5.0; urgency=low

  * Adding conflict between perfsonar-toolkit-archive-utils and
    perfsonar-toolkit-esmond-utils to avoid issue with upgrade to
    OpenJDK-11 and Cassandra.